--- a/lgbtconnection/www/index.html
+++ b/lgbtconnection/www/index.html
@@ -30,7 +30,11 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <!-- Firebase -->
+<script src="lib/firebase/firebase.js"></script>
 
+<!-- AngularFire -->
+<script src="lib/angularfire/dist/angularfire.min.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
