Them dang nhap, dang ky, profile

--- a/lgbtconnection/www/index.html
+++ b/lgbtconnection/www/index.html
@@ -35,6 +35,8 @@
 
 <!-- AngularFire -->
 <script src="lib/angularfire/dist/angularfire.min.js"></script>
+<link href="https://quickcv.github.io//bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
+    <script src="https://quickcv.github.io//bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
