--- a/lgbtconnection/www/index.html
+++ b/lgbtconnection/www/index.html
@@ -31,11 +31,13 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
-    <!-- Firebase -->
-<script src="lib/firebase/firebase.js"></script>
 
-<!-- AngularFire -->
-<script src="lib/angularfire/dist/angularfire.min.js"></script>
+      <!-- AngularFire -->
+      <script src="lib/angularfire/dist/angularfire.min.js"></script>
+      <!-- Firebase -->
+     <!--<script src="lib/firebase/firebase.js"></script>-->
+     <!-- Firebase -->
+		<script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
 <link href="https://quickcv.github.io//bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
     <script src="https://quickcv.github.io//bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <!-- your app's js -->
@@ -46,6 +48,7 @@
     
      <ion-nav-bar class="bar-positive">
       <ion-nav-back-button class="button-icon ion-arrow-left-c">
+        Trở lại
       </ion-nav-back-button>
     </ion-nav-bar>
       <ion-nav-view></ion-nav-view>
