--- a/lgbtconnection/www/index.html
+++ b/lgbtconnection/www/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">        
+    <link href="css/BalooBhaina.css" rel="stylesheet">
     <link rel="manifest" href="manifest.json">
 
     <!-- un-comment this code to enable service worker
@@ -37,9 +35,9 @@
       <!-- Firebase -->
      <!--<script src="lib/firebase/firebase.js"></script>-->
      <!-- Firebase -->
-		<script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
-<link href="https://quickcv.github.io//bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
-    <script src="https://quickcv.github.io//bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+		<script src="lib/firebase.js"></script>
+<link href="angular-xeditable/xeditable.css" rel="stylesheet">
+    <script src="angular-xeditable/xeditable.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
